--- a/dancefloor.html
+++ b/dancefloor.html
@@ -14,7 +14,7 @@
       <span class="title">object dance party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a muggle.</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="DeathEaterDancer">add a Death Eater Dancer!</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="PhoenixFighter">add a Phoenix Fighter!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="PhoenixDancer">add a Phoenix Fighter!</a>
     </div>
     <script src="src/init.js"></script>
   </body>
