Implements lineUp function for dancers

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -11,10 +11,11 @@
   </head>
   <body>
     <div class="topbar">
-      <span class="title">object dance party</span>
+      <span class="title">Harry Potter Dance Party</span>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a muggle.</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="DeathEaterDancer">add a Death Eater Dancer!</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="PhoenixDancer">add a Phoenix Fighter!</a>
+      <a href="#" class="lineUp">BATTLE!</a>
     </div>
     <script src="src/init.js"></script>
   </body>
