Adds tests for death eater and phoenix dancers

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -15,7 +15,11 @@
     });
   </script>
   <script src="spec/blinkyDancerSpec.js"></script>
+  <script src="spec/deathEaterSpec.js"></script>
+  <script src="spec/phoenixSpec.js"></script>
   <script src="src/dancer.js"></script>
+  <script src="src/deathEaterDancer.js"></script>
+  <script src="src/phoenixDancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
 </head>
 <body>
