Changes button text on toolbar

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -12,9 +12,9 @@
   <body>
     <div class="topbar">
       <span class="title">Harry Potter Dance Party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">add a muggle.</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="DeathEaterDancer">add a Death Eater Dancer!</a>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="PhoenixDancer">add a Phoenix Fighter!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="BlinkyDancer">Add a muggle, I guess.</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="DeathEaterDancer">Add a Death Eater Dancer!</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="PhoenixDancer">Add a Phoenix Fighter!</a>
       <a href="#" class="lineUp">BATTLE!</a>
     </div>
     <script src="src/init.js"></script>
