--- a/dancefloor.html
+++ b/dancefloor.html
@@ -17,6 +17,12 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="PhoenixDancer">Add a Phoenix Fighter!</a>
       <a href="#" class="lineUp">BATTLE!</a>
     </div>
+    <audio id="Hermione" src="src/sounds/Hermione.wav"></audio>
+    <audio id="Ron" src="src/sounds/Ron.wav"></audio>
+    <audio id="Voldemort" src="src/sounds/Voldemort.wav"></audio>
+    <audio id="Snape" src="src/sounds/Snape.wav"></audio>
+    <audio id="Harry" src="src/sounds/Harry.wav"></audio>
+    <audio id="Dumbledore" src="src/sounds/Dumbledore.wav"></audio>
     <script src="src/init.js"></script>
   </body>
 </html>
