Adds audio so that it plays on dancer click

--- a/dancefloor.html
+++ b/dancefloor.html
@@ -21,7 +21,7 @@
     <audio id="Ron" src="src/sounds/Ron.mp3" type="audio/mpeg"></audio>
     <audio id="Voldemort" src="src/sounds/Voldemort.mp3" type="audio/mpeg"></audio>
     <audio id="Snape" src="src/sounds/Snape.mp3" type="audio/mpeg"></audio>
-    <audio id="HarryAudio" src="src/sounds/Harry.mp3" type="audio/mpeg"></audio>
+    <audio id="Harry" src="src/sounds/Harry.mp3" type="audio/mpeg"></audio>
     <audio id="Dumbledore" src="src/sounds/Dumbledore.mp3" type="audio/mpeg"></audio>
     <script src="src/init.js"></script>
   </body>
